# RRT_burger

./: Experiment.md  NetworkSetup.md  README.md  TODO: startup robot.md
burger_local_planner/: CMakeLists.txt  Makefile  README.md  blp_plugin.xml  doxy.conf  package.xml
burger_local_planner/cfg/: BurgerPlanner.cfg
burger_local_planner/include/burger_local_planner/: burger_planner.h  burger_planner_ros.h  burger_trajectory_finder.h
burger_local_planner/src/: burger_planner.cpp  burger_planner_ros.cpp  burger_trajectory_finder.cpp  main.cpp
burger_planner/: CMakeLists.txt  package.xml
burger_planner/src/: .rrt.h.swp  rrt.cpp  rrt.h
rrtX_planner/: CMakeLists.txt  package.xml
rrt_planner/: .gitignore  CMakeLists.txt  DynIBEX.md  Makefile  README.md  carrot_plugin.xml  package.xml  rrt_plugin.xml  rrt_plugin.xml~  simulation.md  startup_robot.sh  test.launch
rrt_planner/doxy/: doxy.conf
rrt_planner/exp/: basicExp-ros.sol  basicExp.sol  exp.rsc  template.sol  templateEXP.rsc
rrt_planner/include/rrt_planner/: rrt.h  rrts.h  rrts.hpp  rrts_ros.h  system.h  system_ros.h  system_single_integrator.h
rrt_planner/navigation/launch/: __custom_t3_navigation.launch  burger_navigation.launch
rrt_planner/navigation/param/: burger_local_planner_params.yaml  plannerParams.yaml  planner_params.yaml
rrt_planner/old/: CMakeLists.txt  Makefile  firstTry.c  oldFun.cpp  srcCMakeLists.txt  srcMakefile
rrt_planner/simulation/: Untitled Document  __custom_t3_navigation.launch  __custom_t3_navigation.launch~  __turtlebot3_gazebo_rviz.launch  burger_local_planner_param.yaml  custom_t3_navigation.launch  gazeboNav.rviz  map.pgm  navigation.launch  plannerParams.yaml  s1-gazebo.launch  s2-rviz.launch  s3-navigation.launch  s3-navigation.launch~  s4_navigationreal.launch  s4_navigationreal.launch~  temp launch  tworld.launch  tworld.sh
rrt_planner/src/: carrot.cpp  kdtree.c  rrt.cpp  rrt.cpp~  rrt.h  rrt.h~  rrts_ros.cpp  rrts_standalone.cpp  system_ros.cpp  system_single_integrator.cpp  test_ros.cpp
rrt_planner/viz/: solexp_classes.py  solexp_classes_untyped.py  viz.py
rrt_star/: rrt_star_planner.cpp  rrt_star_planner.h
